Reimplements Dpop+Bff flow. completely deprecated & removed auth bearer. - Using Ed25519 encryption - Admin Flow Mutual adjust with new implemented - Change log gate into WebSocket handshake
Addition capable of database handler by Plugins.
- @entity more reliable of 1 trust source
- no longer counting migration (backward compatible) with .automigration(T)
- repo.save(T) return fresh entity from database